hphp/hack/test/typecheck/goto_double_label.php.exp
File "goto_double_label.php", line 4, characters 6-6:
A semicolon (';') is expected here. (Parsing[1002])
