hphp/hack/test/typecheck/goto_double_label.php
<?hh

function test(): void {
  L0 L1:
}
